--- a/Project_demo/src/main/resources/static/employee_portal.html
+++ b/Project_demo/src/main/resources/static/employee_portal.html
@@ -21,11 +21,16 @@ header {
     color: #fff;
     padding: 18px 24px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-between; /* หัวข้อซ้าย กลุ่มขวา */
     align-items: center;
-    flex-wrap: wrap;
-    gap: 12px;
 }
+
+.staff-controls {
+    display: flex;
+    align-items: center;
+    gap: 10px; /* ระยะระหว่างชื่อกับปุ่ม */
+}
+
 header h1 { margin:0; font-size:1.6rem; }
 .staff-info { font-size:0.95rem; }
 
@@ -51,13 +56,13 @@ h2 {
     font-size: 1.2rem;
 }
 button.primary {
-    background: #f1c40f;
+    background: #2254c5;
     border: none;
     border-radius: 8px;
     padding: 8px 14px;
     font-weight: 600;
     cursor: pointer;
-    color: #2c3e50;
+    color: white;
 }
 button.secondary {
     background: transparent;
@@ -129,13 +134,28 @@ th { background: #f8f9fb; color:#2c3e50; }
     border-radius: 15px;
     box-shadow: 0 2px 8px rgba(0,0,0,0.1);
 }
+
+#salesDateFilter {
+    padding: 6px 10px;
+    border-radius: 8px;
+    border: 1px solid rgba(0,0,0,0.2);
+    font-size: 0.9rem;
+}
+
+
+
 </style>
 </head>
 
 <body>
 <header>
     <h1>ศูนย์ควบคุมพนักงาน</h1>
-    <div class="staff-info" id="staffInfo">กำลังตรวจสอบบัญชี...</div>
+
+    <!-- กลุ่มชื่อบัญชี + ปุ่ม logout -->
+    <div class="staff-controls">
+        <div class="staff-info" id="staffInfo">กำลังตรวจสอบบัญชี...</div>
+        <button class="secondary" id="logoutBtn">ออกจากระบบ</button>
+    </div>
 </header>
 
 <main>
@@ -168,7 +188,16 @@ th { background: #f8f9fb; color:#2c3e50; }
 
     <!-- ยอดขายล่าสุด + กราฟ -->
     <section>
-        <h2>📊 ยอดขายล่าสุด <button class="secondary" id="refreshSales">รีเฟรช</button></h2>
+         <h2>
+        📊 ยอดขายล่าสุด 
+        <div>
+            <input type="date" id="salesDateFilter" />
+            <button class="secondary" id="filterSales">ค้นหา</button>
+            <button class="secondary" id="refreshSales">รีเฟรช</button>
+             <button class="secondary" id="showAllSales">ดูทั้งหมด</button>
+        </div>
+    	</h2>
+    	
         <p class="muted">สรุปยอดขายจากออเดอร์ที่ชำระเงินแล้ว</p>
         <div id="salesError" class="error-box"></div>
 
@@ -213,6 +242,32 @@ const receiptContainer = document.getElementById('receiptContainer');
 
 document.getElementById('refreshPending').addEventListener('click', loadPendingOrders);
 document.getElementById('refreshSales').addEventListener('click', loadSales);
+
+
+document.getElementById('showAllSales').addEventListener('click', () => {
+    // เคลียร์ค่าช่องวันที่
+    document.getElementById('salesDateFilter').value = '';
+
+    // เคลียร์กราฟเก่า (กันซ้อน)
+    if (salesChart) { salesChart.destroy(); salesChart = null; }
+    if (menuPieChart) { menuPieChart.destroy(); menuPieChart = null; }
+
+    // โหลดข้อมูลทั้งหมด
+    loadSales();
+});
+
+
+
+document.getElementById('salesDateFilter').addEventListener('change', () => {
+    if (salesChart) { salesChart.destroy(); salesChart = null; }
+    if (menuPieChart) { menuPieChart.destroy(); menuPieChart = null; }
+    loadSales();
+});
+
+
+
+
+
 document.getElementById('filterBtn').addEventListener('click', loadPendingOrders);
 document.getElementById('clearFilterBtn').addEventListener('click', () => {
     document.getElementById('tableSearch').value = '';
@@ -278,29 +333,280 @@ async function collectPayment(orderId, tableId) {
     } catch(err) { alert(`❌ ${err.message}`); }
 }
 
-function showReceipt(orderId, tableId, receipt) {
+function showReceipt(tableId, receipt) {
     const paidAt = receipt.paidAt ? new Date(receipt.paidAt).toLocaleString('th-TH') : '-';
-    const amount = receipt.totalAmount ?? 0;
-    receiptContainer.innerHTML = `<div class="receipt-card">
-        <h3>🧾 ใบเสร็จรับเงิน</h3>
-        <p>Order #: <strong>${orderId}</strong></p>
-        <p>โต๊ะ: <strong>${tableId ?? receipt.tableId ?? '-'}</strong></p>
-        <p>ยอดรวม: <strong>${amount.toFixed(2)} บาท</strong></p>
-        <p>เวลาชำระเงิน: <strong>${paidAt}</strong></p>
-        <p class="muted">${receipt.message??'บันทึกการชำระเงินเรียบร้อย'}</p>
-    </div>`;
+    
+    const staffViewHtml = `
+        <div class="receipt-card" id="receiptCard">
+            <div style="text-align:right;">
+                <button class="secondary" onclick="hideReceipt()">❌ ปิดใบเสร็จ</button>
+            </div>
+            <h3>🧾 ใบเสร็จรวมโต๊ะ #${tableId}</h3>
+            <p>ออเดอร์ที่รวม: ${receipt.orders.join(', ')}</p>
+            <ul>
+                ${(receipt.items || []).map(item => {
+                    const name = item.menuItemDetails?.name || item.name || 'ไม่ทราบชื่อเมนู';
+                    const price = resolveItemPrice(item);
+                    return `<li>${name} × ${item.quantity} = ${(price * item.quantity).toFixed(2)} บาท</li>`;
+                }).join('')}
+            </ul>
+            <p>ยอดรวม: <strong>${receipt.totalAmount.toFixed(2)} บาท</strong></p>
+            <p>เวลาชำระเงิน: <strong>${paidAt}</strong></p>
+            <p class="muted">บันทึกการชำระเงินเรียบร้อย</p>
+            <button class="primary" onclick="printCustomerReceipt(${tableId})">🖨️ พิมพ์ใบเสร็จลูกค้า</button>
+        </div>
+    `;
+
+    const receiptContainer = document.getElementById('receiptContainer');
+    receiptContainer.innerHTML = staffViewHtml;
+    receiptContainer.style.display = 'block'; // ✅ แสดง
 }
 
+function hideReceipt() {
+    const receiptContainer = document.getElementById('receiptContainer');
+    receiptContainer.style.display = 'none'; // ✅ ซ่อน
+}
+
+
+
+function mergeOrdersByTable(orders, tableId) {
+    const merged = {
+        tableId: tableId,
+        items: [],
+        totalAmount: 0,
+        orders: [],
+        paidAt: new Date().toISOString(),
+    };
+
+    orders.forEach(order => {
+        if (order.tableId === tableId) {
+            merged.orders.push(order.id);
+            (order.items || []).forEach(item => {
+                // ถ้าเมนูซ้ำให้รวมจำนวน
+                const existing = merged.items.find(i => i.menuItemDetails?.name === item.menuItemDetails?.name);
+                if (existing) {
+                    existing.quantity += item.quantity;
+                } else {
+                    merged.items.push({...item});
+                }
+            });
+            merged.totalAmount += calculateOrderTotal(order);
+        }
+    });
+
+    return merged;
+}
+
+async function collectPayment(orderId, tableId) {
+    if (!confirm(`ยืนยันการชำระเงินสำหรับโต๊ะ #${tableId}?`)) return;
+
+    try {
+        const resPending = await fetch(PENDING_ENDPOINT);
+        if (!resPending.ok) throw new Error(`โหลดข้อมูลไม่สำเร็จ (${resPending.status})`);
+        const pendingOrders = await resPending.json();
+
+        // รวมออเดอร์ของโต๊ะเดียวกัน
+        const mergedReceipt = mergeOrdersByTable(pendingOrders, tableId);
+
+        // ชำระเงินทุกออเดอร์ของโต๊ะ
+        for (const oid of mergedReceipt.orders) {
+            await fetch(`${API_BASE}/${oid}/payment`, { method: 'POST' });
+        }
+
+        // แสดงและปริ้นใบเสร็จ
+        showReceipt(tableId, mergedReceipt);
+
+        loadPendingOrders();
+        loadSales();
+    } catch (err) {
+        alert(`❌ ${err.message}`);
+    }
+}
+
+
+function printCustomerReceipt(tableId) {
+    const receiptCard = document.getElementById('receiptCard');
+    if (!receiptCard) return;
+
+    const storeName = "Rest terr น้อง";
+    const address = "123/45 ถนนสุขุมวิท เขตวัฒนา กรุงเทพฯ 10110";
+    const phone = "โทร: 02-123-4567";
+    const footerNote = "ขอบคุณที่ใช้บริการ 🙏";
+
+    const now = new Date().toLocaleString('th-TH');
+    const totalText = receiptCard.querySelector('strong')?.innerText ?? '0.00 บาท';
+    const listItems = Array.from(receiptCard.querySelectorAll('ul li')).map(li => li.innerText);
+
+    const customerHtml = `
+        <div class="receipt-wrapper">
+            <div class="header">
+                <h1>${storeName}</h1>
+                <p>${address}</p>
+                <p>${phone}</p>
+                <hr>
+                <h2>ใบเสร็จรับเงิน (Tax Invoice)</h2>
+                <p>โต๊ะ: ${tableId} | วันที่: ${now}</p>
+                <hr>
+            </div>
+
+            <table class="items">
+                <thead>
+                    <tr>
+                        <th style="width:60%">รายการ</th>
+                        <th style="width:20%; text-align:center;">จำนวน</th>
+                        <th style="width:20%; text-align:right;">ราคา (บาท)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    ${listItems.map(item => {
+                        const [menu, priceText] = item.split('=');
+                        const matchQty = menu.match(/×\s*(\d+)/);
+                        const qty = matchQty ? matchQty[1] : '1';
+                        const name = menu.replace(/×\s*\d+/, '').trim();
+                        const price = priceText ? priceText.replace('บาท', '').trim() : '';
+                        return `<tr>
+                            <td>${name}</td>
+                            <td style="text-align:center;">${qty}</td>
+                            <td style="text-align:right;">${price}</td>
+                        </tr>`;
+                    }).join('')}
+                </tbody>
+            </table>
+
+            <hr>
+            <p class="total">รวมทั้งหมด: ${totalText}</p>
+            <hr>
+            <div class="footer">
+                <p>${footerNote}</p>
+                <p class="small">พิมพ์เมื่อ: ${now}</p>       
+            </div>
+        </div>
+    `;
+
+    const printWindow = window.open('', '', 'width=800,height=1100');
+    printWindow.document.write(`
+        <html>
+        <head>
+            <title>ใบเสร็จโต๊ะ ${tableId}</title>
+            <style>
+                /* ✅ ตั้งค่าขนาดกระดาษ A4 เต็มหน้า */
+                @page {
+                    size: A4 portrait;
+                    margin: 25mm;
+                }
+
+                body {
+                    font-family: 'TH Sarabun New', sans-serif;
+                    font-size: 16px;
+                    color: #333;
+                    background: #fff;
+                    margin: 0;
+                    padding: 0;
+                }
+
+                .receipt-wrapper {
+                    width: 100%;
+                    max-width: 700px;
+                    margin: 0 auto;
+                }
+
+                .header {
+                    text-align: center;
+                    margin-bottom: 20px;
+                }
+
+                h1 {
+                    font-size: 28px;
+                    margin: 0;
+                }
+
+                h2 {
+                    font-size: 20px;
+                    margin: 10px 0;
+                    text-decoration: underline;
+                }
+
+                p {
+                    margin: 4px 0;
+                    line-height: 1.3;
+                }
+
+                hr {
+                    border: none;
+                    border-top: 1px solid #999;
+                    margin: 10px 0;
+                }
+
+                table.items {
+                    width: 100%;
+                    border-collapse: collapse;
+                    margin-top: 10px;
+                }
+
+                table.items th, table.items td {
+                    padding: 8px 6px;
+                    border-bottom: 1px solid #ddd;
+                }
+
+                table.items th {
+                    background: #f4f4f4;
+                }
+
+                .total {
+                    text-align: right;
+                    font-weight: bold;
+                    font-size: 18px;
+                    margin-top: 20px;
+                }
+
+                .footer {
+                    text-align: center;
+                    margin-top: 40px;
+                    font-size: 15px;
+                }
+
+                .small {
+                    font-size: 13px;
+                    color: #666;
+                }
+
+                @media print {
+                    html, body {
+                        background: #fff;
+                    }
+                }
+            </style>
+        </head>
+        <body>${customerHtml}</body>
+        </html>
+    `);
+    printWindow.document.close();
+    printWindow.focus();
+    printWindow.print();
+    printWindow.close();
+}
 // -------------------- ยอดขายล่าสุด --------------------
 let salesChart = null, menuPieChart = null;
-
+//แก้ไขโค้ด
 async function loadSales() {
     salesError.style.display='none';
     salesBody.innerHTML='<tr><td colspan="5" class="muted">กำลังโหลดข้อมูล...</td></tr>';
     try {
         const res = await fetch(SALES_ENDPOINT);
         if(!res.ok) throw new Error(`โหลดยอดขายไม่สำเร็จ (${res.status})`);
-        const data = await res.json();
+        let data = await res.json();
+
+        // 🔹 กรองตามวันที่ที่เลือก
+        const selectedDate = document.getElementById('salesDateFilter').value;
+        if (selectedDate) {
+            data = data.filter(order => {
+                if (!order.createdAt) return false;
+                const orderDate = new Date(order.createdAt).toLocaleDateString('sv-SE'); 
+             // จะได้รูปแบบ YYYY-MM-DD ตรงกับ <input type="date">
+                return orderDate === selectedDate;
+            });
+        }
+
         renderSales(data);
         renderSalesChart(data);
         renderMenuPieChart(data);
@@ -311,6 +617,7 @@ async function loadSales() {
         document.getElementById('salesTotal').innerText='0.00';
     }
 }
+
 
 function renderSales(orders) {
     if(!orders||orders.length===0){
@@ -364,34 +671,88 @@ function renderSalesChart(orders){
 }
 
 function renderMenuPieChart(orders){
-    if(!orders||orders.length===0) return;
-    const today=new Date().toLocaleDateString('th-TH');
-    const todayOrders = orders.filter(order=>{
-        if(!order.createdAt) return false;
-        return new Date(order.createdAt).toLocaleDateString('th-TH')===today;
-    });
-    if(todayOrders.length===0) return;
-    const menuSales={};
-    todayOrders.forEach(order=>{
+    if(!orders || orders.length===0) return;
+
+    const menuSales = {};
+    orders.forEach(order=>{
         (order.items||[]).forEach(item=>{
             const name = item.menuItemDetails?.name || item.name || 'ไม่ทราบชื่อเมนู';
-            const total = resolveItemPrice(item)*item.quantity;
-            menuSales[name]=(menuSales[name]||0)+total;
+            const total = resolveItemPrice(item) * item.quantity;
+            menuSales[name] = (menuSales[name]||0) + total;
         });
     });
-    const labels=Object.keys(menuSales);
-    const data=Object.values(menuSales);
-    const ctx=document.getElementById('menuPieChart').getContext('2d');
+
+    const labels = Object.keys(menuSales);
+    const data = Object.values(menuSales);
+    const ctx = document.getElementById('menuPieChart').getContext('2d');
     if(menuPieChart) menuPieChart.destroy();
+
+    const selectedDate = document.getElementById('salesDateFilter').value || 'ทั้งหมด';
     menuPieChart = new Chart(ctx,{
         type:'pie',
-        data:{ labels, datasets:[{data, backgroundColor:[
-            'rgba(255,99,132,0.7)','rgba(54,162,235,0.7)','rgba(255,206,86,0.7)',
-            'rgba(75,192,192,0.7)','rgba(153,102,255,0.7)','rgba(255,159,64,0.7)'
-        ], borderColor:'#fff', borderWidth:1 }]},
-        options:{ plugins:{ title:{display:true,text:`สัดส่วนยอดขายแต่ละเมนู (${today})`, font:{size:16}}, legend:{position:'bottom'} } }
+        data:{
+            labels,
+            datasets:[{
+                data,
+                backgroundColor:[
+                    'rgba(255,99,132,0.7)','rgba(54,162,235,0.7)',
+                    'rgba(255,206,86,0.7)','rgba(75,192,192,0.7)',
+                    'rgba(153,102,255,0.7)','rgba(255,159,64,0.7)'
+                ],
+                borderColor:'#fff',
+                borderWidth:1
+            }]
+        },
+        options:{
+            plugins:{
+                title:{
+                    display:true,
+                    text:`สัดส่วนยอดขายแต่ละเมนู (${selectedDate})`,
+                    font:{size:16}
+                },
+                legend:{position:'bottom'}
+            }
+        }
     });
 }
+
+
+//รี่
+
+
+
+function initStaffInfo() {
+    const staffInfoEl = document.getElementById('staffInfo');
+    const name = localStorage.getItem('staffDisplayName') || 'พนักงาน';
+    const role = localStorage.getItem('staffRole') || 'EMPLOYEE';
+    staffInfoEl.textContent = `${name} (${role})`;
+}
+
+document.addEventListener('DOMContentLoaded', () => {
+    if (localStorage.getItem('isLoggedIn') !== 'true') {
+        window.location.href = 'staff_login.html';
+    }
+    initStaffInfo();  // ✅ เพิ่มบรรทัดนี้
+    fetchKitchenOrders();
+    setInterval(fetchKitchenOrders, 5000);
+});
+
+
+
+//🔹 ฟังก์ชันออกจากระบบ
+function logout() {
+    if (confirm("คุณต้องการออกจากระบบหรือไม่?")) {
+        localStorage.removeItem('isLoggedIn');
+        localStorage.removeItem('staffDisplayName');
+        localStorage.removeItem('staffRole');
+        window.location.href = 'staff_login.html';
+    }
+}
+
+// 🔹 ผูก event ปุ่ม logout
+document.getElementById('logoutBtn').addEventListener('click', logout);
+
+
 
 document.addEventListener('DOMContentLoaded',()=>{
     initStaffInfo();
